<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnNo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no1" />

    <Button
        android:id="@+id/btnNo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no2" />

    <Button
        android:id="@+id/btnNo3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no3" />

</LinearLayout>
