<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:padding="20sp"
            android:src="@drawable/baseline_home_24" />

        <TextView
            android:id="@+id/titleText_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="70dp"
            android:background="@color/yellow"
            android:padding="20dp"
            android:text="@string/title_register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/identitas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_weight="1"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_below="@id/headerLayout"
            android:layout_centerHorizontal="true"
            android:background="@color/light_blue"
            android:src="@drawable/baseline_person_24" />

        <LinearLayout
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_fullname"
                android:layout_marginBottom="10dp"
                android:background="@color/green"
                android:backgroundTint="@color/green"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:layout_marginBottom="10dp"
                android:background="@color/green"
                android:backgroundTint="@color/green"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:layout_marginBottom="10dp"
                android:background="@color/green"
                android:backgroundTint="@color/green"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:layout_marginBottom="10dp"
                android:background="@color/green"
                android:backgroundTint="@color/green"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confpass"
                android:layout_marginBottom="10dp"
                android:background="@color/green"
                android:backgroundTint="@color/green"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_blue"
        android:background="@drawable/selector_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:text="@string/button_register"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="32dp"
        android:text="Tekan Register untuk lanjut ke halaman Login"
        android:textSize="14sp"/>

</LinearLayout>
